tests/snapshots/lists__lists__list_sum.snap
---
source: tests/lists.rs
expression: result

---
Unexpected token.

error: 
  ┌─ sample:3:30
  │
3 │   String.fromInt (List.sum [1, 2])
  │                              ^


